[gd_scene load_steps=23 format=3 uid="uid://7vjvk5bghwkq"]

[ext_resource type="Script" path="res://Player/Scenes/MainHand/player_main_hand.gd" id="1_grn42"]
[ext_resource type="Texture2D" uid="uid://x2ybpkt3kmnk" path="res://Player/Sprites/PlayerHandSprite.png" id="2_075al"]
[ext_resource type="PackedScene" uid="uid://db1mqmde5v1v3" path="res://Arrow/Scenes/BasicArrow.tscn" id="2_djcly"]
[ext_resource type="Script" path="res://Player/Scenes/MainHand/States/main_hand_state_machine.gd" id="3_y475i"]
[ext_resource type="Script" path="res://Player/Scenes/MainHand/States/m_h_idle_state.gd" id="4_24nrb"]
[ext_resource type="Script" path="res://Player/Scenes/MainHand/States/m_h_pulling_state.gd" id="5_ysxrx"]
[ext_resource type="Script" path="res://Player/Scenes/MainHand/States/m_h_max_pull_state.gd" id="6_i2jfe"]
[ext_resource type="Script" path="res://Player/Scenes/MainHand/States/m_h_swing_state.gd" id="8_ly83r"]
[ext_resource type="Texture2D" uid="uid://dpia5g2ya6qvb" path="res://Swords/BasicSword.png" id="9_djel3"]
[ext_resource type="Texture2D" uid="uid://3p61xqypv41m" path="res://Player/Sprites/SwingEffect.png" id="10_3m267"]
[ext_resource type="Script" path="res://General Nodes/HurtBox/hurt_box.gd" id="11_64sb5"]

[sub_resource type="Animation" id="Animation_8g0cn"]
resource_name = "Idle"
length = 0.8
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, -2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainHandStateMachine/Swing/Sword:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_e83k8"]
resource_name = "Max_Pull"
length = 0.1
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, -2)]
}

[sub_resource type="Animation" id="Animation_52yoq"]
resource_name = "Pull"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 8), Vector2(1, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, -2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainHandStateMachine/Swing/Sword:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_25jve"]
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ArrowPosition:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainHandStateMachine/Swing/Sword:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MainHandStateMachine/Swing/Sword:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MainHandStateMachine/Swing/Sword:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_6jul4"]
resource_name = "Swing"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainHandStateMachine/Swing/Sword:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, -3), Vector2(4, -3), Vector2(4, -2), Vector2(5, 2), Vector2(5, 3), Vector2(4, 4), Vector2(1, 5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainHandStateMachine/Swing/Sword:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MainHandStateMachine/Swing/Sword:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.22173, -1.0472, 0.785398, 0.959931, 1.13446, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3cely"]
_data = {
"Idle": SubResource("Animation_8g0cn"),
"Max_Pull": SubResource("Animation_e83k8"),
"Pull": SubResource("Animation_52yoq"),
"RESET": SubResource("Animation_25jve"),
"Swing": SubResource("Animation_6jul4")
}

[sub_resource type="Animation" id="Animation_rg8yt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_u8r4h"]
resource_name = "SlashEffect"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5orw7"]
_data = {
"RESET": SubResource("Animation_rg8yt"),
"SlashEffect": SubResource("Animation_u8r4h")
}

[sub_resource type="Curve" id="Curve_sgu6n"]
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7m5yu"]
radius = 7.0
height = 34.0

[node name="PlayerMainHand" type="CharacterBody2D"]
script = ExtResource("1_grn42")
arrow = ExtResource("2_djcly")
min_shot_power = 0.3
max_offset = 15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_075al")
centered = false
hframes = 6
vframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3cely")
}

[node name="HoldPosition" type="Node2D" parent="."]
position = Vector2(1, 8)

[node name="ArrowPosition" type="Node2D" parent="."]
position = Vector2(1, 8)

[node name="MainHandStateMachine" type="Node2D" parent="."]
script = ExtResource("3_y475i")

[node name="Idle" type="Node2D" parent="MainHandStateMachine"]
script = ExtResource("4_24nrb")

[node name="Pulling" type="Node2D" parent="MainHandStateMachine"]
script = ExtResource("5_ysxrx")

[node name="MaxPull" type="Node2D" parent="MainHandStateMachine"]
script = ExtResource("6_i2jfe")

[node name="TiredTimer" type="Timer" parent="MainHandStateMachine/MaxPull"]
wait_time = 3.0

[node name="Swing" type="Node2D" parent="MainHandStateMachine"]
script = ExtResource("8_ly83r")

[node name="Sword" type="Node2D" parent="MainHandStateMachine/Swing"]
visible = false
position = Vector2(5, 5)
rotation = -1.5708
scale = Vector2(0.5, 0.5)

[node name="SwordSprite" type="Sprite2D" parent="MainHandStateMachine/Swing/Sword"]
position = Vector2(9.53674e-07, -8)
texture = ExtResource("9_djel3")

[node name="SlashEffect" type="Sprite2D" parent="MainHandStateMachine/Swing"]
position = Vector2(17, -4)
texture = ExtResource("10_3m267")
hframes = 5
frame = 4

[node name="SlashAnimationPlayer" type="AnimationPlayer" parent="MainHandStateMachine/Swing/SlashEffect"]
libraries = {
"": SubResource("AnimationLibrary_5orw7")
}

[node name="SwingCooldown" type="Timer" parent="MainHandStateMachine"]

[node name="PerfectAimParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 500
lifetime = 0.7
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
emission_shape = 5
emission_points = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)
emission_normals = PackedVector2Array(0, 1, -1, 0, 0, -1, 1, 0)
emission_colors = PackedColorArray()
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_amount_curve = SubResource("Curve_sgu6n")

[node name="SlashHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("11_64sb5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlashHurtBox"]
position = Vector2(21, -5)
shape = SubResource("CapsuleShape2D_7m5yu")
